prevent redrict when user hold icon on mobile

--- a/BelmacsWebsite/src/components/Admin/About/AboutPeople/PeopleDashboard/PeopleDashboard.css
+++ b/BelmacsWebsite/src/components/Admin/About/AboutPeople/PeopleDashboard/PeopleDashboard.css
@@ -249,7 +249,3 @@
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
 }
-
-.no-drag {
-  pointer-events: none;
-}
